syntax = "proto3";

option csharp_namespace = "Server.protos";


service ServerCoordinationServices {
    rpc LockResourceService(LockRequest) returns(LockResponse){}
    rpc UpdateValue(NewValue) returns(UnlockConfirmation){}
}

message LockRequest{
    string object_id = 1;
}

message LockResponse{
    bool ok = 1;
}

message NewValue{
    string id = 1;
    string value = 2;
}

message UnlockConfirmation{
    bool ok = 1;
}